@@ -93,6 +93,14 @@ MAX_UNIQUE_RESPAWN_TIME = 40000
 # themselves, set this number to -1.
 LEVEL_UNSTATIC_CHANCE = 30
 
+# Option : chance of an enemy adjacent to a player interfering his/her attempt
+# to cast a spell/prayer/psi-power etc.
+# If n (max==8) monsters surrounds her/him, the chance of interference would be
+#    1 - (1 - SPELL_INTERFERE / 100)^n
+# Please note that setting this too high makes spellcaster-classes *very* hard
+# to survive. 2-5 might be suffisant.
+SPELL_INTERFERE = 0
+
 # Option : set the number of minutes that a player will be automatically retired
 # in after winning the game.  Setting this option is highly advised to prevent
 # one character from killing Morgoth multiple times, not letting go of the best
