@@ -968,6 +968,9 @@ void do_cmd_cast(int Ind, int book, int spell)
 		return;
 	}
 
+	/* Take a turn */
+	p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr->num_spell;
+
 	/* Spell failure chance */
 	chance = spell_chance(Ind, s_ptr);
 
@@ -981,11 +984,8 @@ void do_cmd_cast(int Ind, int book, int spell)
 	/* Process spell */
 	else
 	{
-		/* Take a turn */
-		p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr->num_spell;
-
 		/* Check interference */
-//		if (interfere(Ind, 3)) return;
+		if (interfere(Ind, cfg_spell_interfere)) return;
 
 		/* Hack -- chance of "beam" instead of "bolt" */
 		beam = ((p_ptr->pclass == 1) ? plev : (plev / 2));
@@ -1843,6 +1843,9 @@ void do_cmd_sorc(int Ind, int book, int spell)
 		return;
 	}
 
+	/* Take a turn */
+	p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr->num_spell;
+
 	/* Spell failure chance */
 	chance = spell_chance(Ind, s_ptr);
 
@@ -1856,11 +1859,8 @@ void do_cmd_sorc(int Ind, int book, int spell)
 	/* Process spell */
 	else
 	{
-		/* Take a turn */
-		p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr->num_spell;
-
 		/* Check interference */
-//		if (interfere(Ind, 3)) return;
+		if (interfere(Ind, cfg_spell_interfere)) return;
 
 		/* Hack -- chance of "beam" instead of "bolt" */
 		beam = ((p_ptr->pclass == 1) ? plev : (plev / 2));
@@ -2690,6 +2690,9 @@ void do_cmd_pray(int Ind, int book, int spell)
 		return;
 	}
 
+	/* Take a turn */
+	p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr->num_spell;
+
 	/* Spell failure chance */
 	chance = spell_chance(Ind, s_ptr);
 
@@ -2703,11 +2706,9 @@ void do_cmd_pray(int Ind, int book, int spell)
 	/* Success */
 	else
 	{
-		/* Take a turn */
-		p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr->num_spell;
-
 		/* Check interference */
 //		if (interfere(Ind, p_ptr->pclass == CLASS_PRIEST ? 2 : 3)) return;
+		if (interfere(Ind, cfg_spell_interfere * (p_ptr->pclass == CLASS_PRIEST ? 2 : 3) / 3)) return;
 
 		if (spell >= 64) j += 64;
 		switch (j)
@@ -3687,6 +3688,9 @@ void do_cmd_fight(int Ind, int book, int spell)
 		return;
 	}
 
+	/* Take a turn */
+	p_ptr->energy -= level_speed(p_ptr->dun_depth);
+
 	/* Spell failure chance */
 	chance = spell_chance(Ind, s_ptr);
 
@@ -3700,6 +3704,10 @@ void do_cmd_fight(int Ind, int book, int spell)
 	/* Process spell */
 	else
 	{
+		/* Check interference */
+		/* Not interfered since it's "technique" */
+		//	if (interfere(Ind, cfg_spell_interfere)) return;
+
 		/* Spells.  */
 		switch (j)
 		{
@@ -3818,9 +3826,6 @@ void do_cmd_fight(int Ind, int book, int spell)
 			p_ptr->window |= PW_SPELL;
 		}
 	}
-
-	/* Take a turn */
-	p_ptr->energy -= level_speed(p_ptr->dun_depth);
 
 	/* Sufficient mana */
 	if (s_ptr->smana <= p_ptr->csp)
@@ -4118,6 +4123,9 @@ void do_cmd_shad(int Ind, int book, int spell)
 		return;
 	}
 
+	/* Take a turn */
+	p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr->num_spell;
+
 	/* Spell failure chance */
 	chance = spell_chance(Ind, s_ptr);
 
@@ -4131,11 +4139,8 @@ void do_cmd_shad(int Ind, int book, int spell)
 	/* Process spell */
 	else
 	{
-		/* Take a turn */
-		p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr->num_spell;
-
 		/* Check interference */
-//		if (interfere(Ind, 2)) return;
+		if (interfere(Ind, cfg_spell_interfere * 2 / 3)) return;
 
 		/* Hack -- chance of "beam" instead of "bolt" */
 		beam = plev / 2;
@@ -4576,6 +4581,9 @@ void do_cmd_hunt(int Ind, int book, int spell)
 		return;
 	}
 
+	/* Take a turn */
+	p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr->num_spell;
+
 	/* Spell failure chance */
 	chance = spell_chance(Ind, s_ptr);
 
@@ -4589,11 +4597,8 @@ void do_cmd_hunt(int Ind, int book, int spell)
 	/* Process spell */
 	else
 	{
-		/* Take a turn */
-		p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr->num_spell;
-
 		/* Check interference */
-//		if (interfere(Ind, 5)) return;
+		if (interfere(Ind, cfg_spell_interfere * 2)) return;
 
 		/* Hack -- chance of "beam" instead of "bolt" */
 		beam = plev / 2;
@@ -5895,6 +5900,9 @@ void do_cmd_psi(int Ind, int book, int spell)
 		return;
 	}
 
+	/* Take a turn */
+	p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr2->num_spell;
+
 	/* Spell failure chance */
 	chance = spell_chance(Ind2, s_ptr);
 
@@ -5908,11 +5916,9 @@ void do_cmd_psi(int Ind, int book, int spell)
 	/* Process spell */
 	else
 	{
-		/* Take a turn */
-		p_ptr->energy -= level_speed(p_ptr->dun_depth) / p_ptr2->num_spell;
-
 		/* Check interference */
 //		if (interfere(Ind2, Ind == Ind2 ? 10 : 2)) return;
+		if (interfere(Ind, cfg_spell_interfere * ( Ind == Ind2 ? 9 : 2) / 3)) return;
 
 	  /* Hack -- chance of "beam" instead of "bolt" */
 	  beam = plev / 2;
