@@ -1897,6 +1897,10 @@ void set_server_option(char * option, char * value)
 	{
 		cfg_min_unstatic_level = atoi(value);
 	}
+	else if (!strcmp(option,"SPELL_INTERFERE"))
+	{
+		cfg_spell_interfere = atoi(value);
+	}
 	else if (!strcmp(option,"CONSOLE_PORT"))
 	{
 		cfg_console_port = atoi(value);
